# kalman_demo

./: .coverage  .gitignore  README.md  exploring_kalman_filters.ipynb  generate_blog_figures.py  main.py  pyproject.toml  test_total.py
.claude/: settings.local.json
examples/: basic_simulation.py  explore_kalman_gain.py  visualization_demo.py
src/inventory_simulator/: __init__.py  analytics.py  config.py  observer.py  runner.py  simulator.py  types.py  utils.py  visualization.py
src/inventory_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_analytics.py  test_config.py  test_integration.py  test_observer.py  test_runner.py  test_simulator.py  test_types.py  test_utils.py
