[project]
name = "inventory-system"
version = "0.1.0"
description = "Inventory simulator with pandas-based state management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
viz = [
    "matplotlib>=3.8.0",
]
